[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/images/3dcubes.png" type="Texture" id=1]
[ext_resource path="res://demos/components/Label.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/fonts/Lato-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://demos/components/CardPanel.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.741176, 0.333333, 0.305882, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.427451, 0.619608, 0.666667, 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = ExtResource( 3 )

[node name="CardPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false,
"_old_modulate": Color( 1, 1, 1, 0 )
}
_image = ExtResource( 1 )

[node name="Title" type="Panel" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 50 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" parent="Title" instance=ExtResource( 2 )]
margin_left = 12.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "3D Cubes"
align = 0
valign = 1

[node name="Subtitle" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 50 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubtitleLabel" parent="Subtitle" instance=ExtResource( 2 )]
margin_left = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Shows something"
align = 0
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Subtitle"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Bla bla bla bla"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_rect_changed" from="." to="." method="_on_CardPanel_item_rect_changed"]
[connection signal="mouse_entered" from="." to="." method="_on_CardPanel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CardPanel_mouse_exited"]
